--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -14,7 +14,8 @@ general {
     unlock_cmd = #notify-send "unlock!"      # same as above, but unlock
     before_sleep_cmd = $LOCKSCREEN    # command ran before sleep
     after_sleep_cmd = # notify-send "Awake!"  # command ran after sleep
-    ignore_dbus_inhibit = 0
+    ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
+    ignore_systemd_inhibit = false          # whether to ignore systemd-inhibit --what=idle inhibitors
 }
 
 # Dims the display
@@ -26,7 +27,7 @@ on-timeout = { brightnessctl -s && brightnessctl s 1% ;}
 
 # Lock it first before dpms off so that screen won't show for a moment after wake up.
 listener {
-    timeout = 300
+    timeout = 120
     on-timeout = $LOCKSCREEN
 }
 
